# playdot-player

./: .fallowrc.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  robots.txt  sitemap-0.xml  sitemap-index.xml  tsconfig.json  vite.config.ts
.github/workflows/: deploy-website.yml
_astro/: index@_@astro.HwvOJzdZ.css
docs/: releasing.md
scripts/: release-artifacts.ps1  setup-lib.mjs
shaders/: FSR.glsl  adaptive-luma-ultra.glsl
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_artwork.rs  launch.rs  lib.rs  main.rs  svp.rs  thumbnail_frame.rs
src/app/: App.tsx  styles.css
src/features/mediaOpen/: PlayerUrlDialog.tsx  actions.ts  startup.ts  types.ts  useOpenUrlDialog.ts
src/features/playerChrome/: MenuActionItem.tsx  PlayerContextMenu.tsx  constants.ts  types.ts  useAutoHiddenFlag.ts  useBlurActiveControlWhenChromeHidden.ts  useChromeVisibility.ts  useCursorVisibility.ts  useStageContextMenu.ts  useSubmenuViewportStyle.ts  useTitlebarDrag.ts
src/features/shortcuts/: handlers.ts  types.ts  useGlobalShortcuts.ts  utils.ts
src/features/toaster/: ToastOverlay.tsx  messages.ts  types.ts  useToastEffects.ts
src/integrations/mpv/: MpvPlayer.ts  MpvThumbnailer.ts  audioArtwork.ts  audioNormalizer.ts  config.ts  constants.ts  events.ts  fsr.ts  libmpv-api.ts  playback.ts  playbackControl.ts  stateUpdates.ts  (+2 more)
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/public/: manifest.json
(+28 files in other folders)
