[package]
name = "playdot-player"
version = "0.1.0"
description = "Windows-first video player with Tauri and libmpv"
authors = ["playdot player"]
edition = "2021"

[lib]
name = "playdot_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-libmpv = { path = "../vendor/tauri-plugin-libmpv" }
tauri-plugin-log = "2.8.0"
